apps/home/social/baikal/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: baikal
  namespace: social
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - caldav.superkooka.com
      secretName: baikal-tls
  rules:
    - host: caldav.superkooka.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: baikal
                port:
                  number: 80
